# manager

./: .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.yaml  flake.nix  shell.nix  todo.md
backend/: package-lock.json  package.json  rescript.json
flake-info/: Cargo.toml  (+1 more)
registry-worker/: .gitignore  Cargo.toml  default.nix  flake.nix  module.nix
registry-worker/migrations/2025-06-25-120701_packages_v1/: down.sql  up.sql
registry-worker/migrations/2025-06-27-082622_sources/: down.sql  up.sql
registry-worker/migrations/2025-06-27-095314_no_itermediate_sources/: down.sql  up.sql
registry-worker/migrations/2025-06-27-105437_packages_fields/: down.sql  up.sql
registry-worker/migrations/2025-06-27-114054_package_versions_nullables/: down.sql  up.sql
registry-worker/migrations/2025-06-27-121959_package_versions_unique_package_version/: down.sql  up.sql
registry-worker/migrations/2025-06-27-125046_package_versions_source_foreign_keys/: down.sql  up.sql
registry-worker/migrations/2025-06-30-112320_sources_processed/: down.sql  up.sql
registry-worker/migrations/2025-06-30-113024_package_versions_sources/: down.sql  up.sql
registry-worker/migrations/2025-07-18-074452_new_nixpkgs_structure/: down.sql  up.sql
registry-worker/migrations/2025-07-21-051135_maintainers/: down.sql  up.sql
registry-worker/migrations/2025-07-22-053357_licenses/: down.sql  up.sql
registry-worker/migrations/2025-07-23-065229_unique_nixpkgs_source_sha/: down.sql  up.sql
registry-worker/migrations/2025-07-23-080849_license/: down.sql  up.sql
registry-worker/src/: context.rs  logger.rs  main.rs  model.rs  process.rs  schema.rs  types.rs
registry-worker/src/libs/: diesel_test_mock.rs  mod.rs  super_orm.rs
registry-worker/src/models/: git_host_source.rs  git_source.rs  license.rs  maintainer.rs  mod.rs  nixpkgs_channel.rs  nixpkgs_channel_source.rs  nixpkgs_channels.rs  nixpkgs_source.rs  package.rs  package_version.rs  package_version_license.rs  package_version_maintainer.rs  package_version_platform.rs  package_version_source.rs  platform.rs  revision.rs  source.rs
registry-worker/src/process/: mod.rs  process_exports.rs  process_latest_nixpkgs.rs  process_nixpkgs_branches.rs  process_nixpkgs_commits.rs  process_platforms.rs  process_test_single.rs
server/: Cargo.toml
server/migrations/: 20241226162038_common.sql
server/src/: main.rs
(+36 files in other folders)
