[package]
name = "registry-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
flake-info = { path = "../flake-info" }
diesel = { version = "2.2.11", features = ["postgres", "sqlite"] }
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["full"] }
moka = { version = "0.12.10", features = ["sync"] }
