[package]
name = "registry-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
flake-info = { path = "../flake-info" }
diesel = { version = "2.2.11", features = ["postgres", "sqlite", "chrono"] }
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["full"] }
moka = { version = "0.12.10", features = ["sync"] }
bb8 = "0.9.0"
diesel-async = { version = "0.6.1", features = ["bb8", "postgres"] }
octocrab = { version = "0.44.1", features = ["stream"] }
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
futures-util = "0.3.31"
futures = "0.3.31"
itertools = "0.14.0"
