[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19.0"
flake-info = { path = "../nixos-search/flake-info" }
poem = "3.1.5"
poem-openapi = { version = "5.1.4", features = ["swagger-ui"] }
tokio = "1.42.0"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
], default-features = false }
tracing-subscriber = "0.3.19"
